# duckduckrust

./: Cargo.toml  LICENSE  README.org
.github/workflows/: main.yml  test.yml
src/: main.rs
