[package]
name = "terminal-web-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
scraper = "0.13.0"

crossterm = "0.17"
tui = { version = "0.12", default-features = false, features = ['crossterm'] }
serde = "1.0.139"
serde_json = "1.0.82"
serde_derive = "1.0.139"